Huda-23023105.out
  File "/project/6067967/hsheikh1/brats-mets/main.py", line 1
    <<<<<<< Updated upstream
    ^^
SyntaxError: invalid syntax
